# VirtualCPU_Stack

./: .gitignore  CMakeLists.txt  cycle.txt  main.cxx  recursion.txt  test.txt
Emulator/: CMakeLists.txt  emulator.cxx
Emulator/Memory/: CMakeLists.txt  emu_memory.cxx
Emulator/Memory/include/: emu_memory.h
Emulator/Operations/: CMakeLists.txt  operations.cxx
Emulator/Operations/include/: operations.h
Emulator/examples/: example
Emulator/include/: emulator.h
Emulator/parser/: CMakeLists.txt  parser.cxx
Emulator/parser/include/: parser.h
Emulator/parser/tests/: tests_parser.cxx
Emulator/preprocessor/: CMakeLists.txt  preprocessor.cxx
Emulator/preprocessor/include/: preprocessor.h
Emulator/serializer/: CMakeLists.txt  serializer.cxx
Emulator/serializer/include/: serializer.h
Emulator/tests/: tests2  tests_emulator.cxx
include/: stack.hpp
stack/: CMakeLists.txt
stack/include/: stack.h
stack/test/: tests.cxx
test/: tests.cxx
